# CAPA-3DSG

./: .gitignore  README.md  TroubleShooting.md  constraints.txt  main.py  object_part_knowledge.json  pyproject.toml  tree.py
configs/: CAPA.yaml  CAPA_slam.yaml  base.yaml  base_mapping.yaml  base_paths.yaml  fungraph3d.yaml  main.yaml  record3d.yaml  sam.yaml  scenefun3d.yaml
dataset/: FunGraph3D  Replica  ReplicaSSG  S3DIS  SceneFun3D  annotation_affordance.py  annotation_spatial.py  annotation_statistic.py
dataset/UniGraph3D/: FunGraph3D.labels.node.json  FunGraph3D.relations.functional.json  FunGraph3D.relations.spatial.json  FunGraph3D.scenes.txt  SceneFun3D.labels.affordance.json  SceneFun3D.labels.edge.json  SceneFun3D.labels.node.json  SceneFun3D.relations.functional.json  SceneFun3D.relations.spatial.json
hydra_configs/: classes.yaml  main.yaml  replica.yaml  rerun_realtime_mapping.yaml  stream_record3d.yaml
scripts/: 2D_detection.py  3D_fusion.py  3D_fusion_debug_snapshots.py  3D_fusion_debug_snapshots_rmbg.py  gen_full_graph.py  gen_init_graph.py  get_connectivity_cg.py  get_connectivity_cg_preprocess.py  get_connectivity_ofg.py  import_test.py  refine_pkl.py  viewer_pkl.py
scripts/exp/: eval_scene_2.sh  run_0.sh  run_CAPAD.sh  run_FunGraph3D.sh  run_ReplicaSSG.sh  run_SceneFun3Ddev.sh  run_SceneFun3Dtest.sh  run_UniGraph3D.sh  run_scene_0.sh  (+3 more)
temp_codes/: 2D_detection_legacy.py  cg.py  eval_all_SBERT.py  eval_node.py  eval_node_CLIP.py  eval_triplet.py  gsa.py  main.py  part_shape_from_pklgz.py  test_clip.py  utils.py  visualize_saved_pc.py
(+35 files in other folders)
